// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packageHandler > files > multi-word package names > creates a multi-word package 1`] = `
"# Shared Package '@my-org/form-validators'

Use code in this package by adding it to the dependencies on the side you want
to use it, with the special \`workspace:*\` version, and then importing it into
your code:

\`\`\`json
  "dependencies": {
    "@my-org/form-validators": "workspace:*"
  }
\`\`\`

\`\`\`javascript
import { formValidators } from '@my-org/form-validators';
\`\`\`
"
`;

exports[`packageHandler > files > multi-word package names > creates a multi-word package 2`] = `
"export function formValidators() {
  return 0
}
"
`;

exports[`packageHandler > files > multi-word package names > creates a multi-word package 3`] = `
"import { formValidators } from './index.js'

describe('formValidators', () => {
  it('should not throw any errors', async () => {
    expect(formValidators()).not.toThrow()
  })
})
"
`;

exports[`packageHandler > files > multi-word package names > creates a multi-word package 4`] = `
"import type { ScenarioData } from '@cedarjs/testing/api'

export const standard = defineScenario({
  // Define the "fixture" to write into your test database here
  // See guide: https://cedarjs.com/docs/testing#scenarios
})

export type StandardScenario = ScenarioData<unknown>
"
`;

exports[`packageHandler > files > multi-word package names > creates a multiWord package 1`] = `
"# Shared Package '@my-org/form-validators'

Use code in this package by adding it to the dependencies on the side you want
to use it, with the special \`workspace:*\` version, and then importing it into
your code:

\`\`\`json
  "dependencies": {
    "@my-org/form-validators": "workspace:*"
  }
\`\`\`

\`\`\`javascript
import { formValidators } from '@my-org/form-validators';
\`\`\`
"
`;

exports[`packageHandler > files > multi-word package names > creates a multiWord package 2`] = `
"export function formValidators() {
  return 0
}
"
`;

exports[`packageHandler > files > multi-word package names > creates a multiWord package 3`] = `
"import { formValidators } from './index.js'

describe('formValidators', () => {
  it('should not throw any errors', async () => {
    expect(formValidators()).not.toThrow()
  })
})
"
`;

exports[`packageHandler > files > multi-word package names > creates a multiWord package 4`] = `
"import type { ScenarioData } from '@cedarjs/testing/api'

export const standard = defineScenario({
  // Define the "fixture" to write into your test database here
  // See guide: https://cedarjs.com/docs/testing#scenarios
})

export type StandardScenario = ScenarioData<unknown>
"
`;

exports[`packageHandler > files > single word package names > creates a single word package 1`] = `
"# Shared Package '@my-org/foo'

Use code in this package by adding it to the dependencies on the side you want
to use it, with the special \`workspace:*\` version, and then importing it into
your code:

\`\`\`json
  "dependencies": {
    "@my-org/foo": "workspace:*"
  }
\`\`\`

\`\`\`javascript
import { foo } from '@my-org/foo';
\`\`\`
"
`;

exports[`packageHandler > files > single word package names > creates a single word package 2`] = `
"export function foo() {
  return 0
}
"
`;

exports[`packageHandler > files > single word package names > creates a single word package 3`] = `
"import { foo } from './index.js'

describe('foo', () => {
  it('should not throw any errors', async () => {
    expect(foo()).not.toThrow()
  })
})
"
`;

exports[`packageHandler > files > single word package names > creates a single word package 4`] = `
"import type { ScenarioData } from '@cedarjs/testing/api'

export const standard = defineScenario({
  // Define the "fixture" to write into your test database here
  // See guide: https://cedarjs.com/docs/testing#scenarios
})

export type StandardScenario = ScenarioData<unknown>
"
`;
